--- a/05.HTMLStructureren/ToyBench3/project.html
+++ b/05.HTMLStructureren/ToyBench3/project.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <h1>Ol' Toy Bench</h1>
-    <p> A SECOND LIFE FOR TIMELESS TOYS</p>
+    <header>
+        <h1>Ol' Toy Bench</h1>
+        <p> A SECOND LIFE FOR TIMELESS TOYS</p>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
@@ -48,123 +50,149 @@
             <input type="submit" value="apply">
         </p>
     </form>
-    <h2>PROJECTS</h2>
+    <main>
+        <h2>PROJECTS</h2>
+        <section>
+            <img src="img/fire-truck.jpg" alt="">
+            <h3>FIRE TRUCK</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/bicycle-bronze.jpg" alt="">
+            <h3>BRONZE BISYCLE</h3>
+            <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/teddy-luggage.jpg" alt="">
+            <h3>TEDDY BEAR</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/toy-spinner.jpg" alt="">
+            <h3>SPINNER</h3>
+            <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/fire-truck.jpg" alt="">
+            <h3>FIRE TRUCK</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/bicycle-bronze.jpg" alt="">
+            <h3>BRONZE BISYCLE</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/teddy-luggage.jpg" alt="">
+            <h3>TEDDY BEAR</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/toy-spinner.jpg" alt="">
+            <h3>SPINNER</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/fire-truck.jpg" alt="">
+            <h3>FIRE TRUCK</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/bicycle-bronze.jpg" alt="">
+            <h3>BRONZE BISYCLE</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/teddy-luggage.jpg" alt="">
+            <h3>TEDDY BEAR</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/toy-spinner.jpg" alt="">
+            <h3>SPINNER</h3>
+            <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.</p>
 
-    <img src="img/fire-truck.jpg" alt="">
-    <h3>FIRE TRUCK</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/bicycle-bronze.jpg" alt="">
-    <h3>BRONZE BISYCLE</h3>
-    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/teddy-luggage.jpg" alt="">
-    <h3>TEDDY BEAR</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/toy-spinner.jpg" alt="">
-    <h3>SPINNER</h3>
-    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/fire-truck.jpg" alt="">
-    <h3>FIRE TRUCK</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/bicycle-bronze.jpg" alt="">
-    <h3>BRONZE BISYCLE</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/teddy-luggage.jpg" alt="">
-    <h3>TEDDY BEAR</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/toy-spinner.jpg" alt="">
-    <h3>SPINNER</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/fire-truck.jpg" alt="">
-    <h3>FIRE TRUCK</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/bicycle-bronze.jpg" alt="">
-    <h3>BRONZE BISYCLE</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/teddy-luggage.jpg" alt="">
-    <h3>TEDDY BEAR</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-    <img src="img/toy-spinner.jpg" alt="">
-    <h3>SPINNER</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.</p>
-
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-
-
-    <p>
-        <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
-        <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png" alt="">
-    </p>
-
+            <ul>
+                <li><a href="">DETAILS</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>
+            <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+            <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png"
+                alt="">
+        </p>
+    </footer>
 
 
 
