--- a/05.HTMLStructureren/ToyBench3/contact.html
+++ b/05.HTMLStructureren/ToyBench3/contact.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <h1>Ol' Toy Bench</h1>
-    <p>A SECOND LIFE FOR TIMELESS TOYS</p>
+    <header>
+        <h1>Ol' Toy Bench</h1>
+        <p>A SECOND LIFE FOR TIMELESS TOYS</p>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
@@ -40,31 +42,34 @@
             <input type="submit" value="submit">
         </p>
     </form>
-    <h2>CONTACT US</h2>
-
-    <address>
-        "addresslogo" address:
-        1224 Park Pi, Brooklyn, NY 11213
-    </address>
-
-    <p>
-        "Phonelogo" Phone:
-        +1 800 5596580
-        "maillogo" E-mail:
-    </p>
-    <a href="mailto:mail@demolink.org"></a>
-
-
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193747.6573477421!2d-74.08508212082744!3d40.6451593628039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C%20%C3%89tat%20de%20New%20York%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sbe!4v1665247726243!5m2!1sfr!2sbe"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-    <p>
-        <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
-        <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png" alt="">
-    </p>
-
+    <main>
+        <h2>CONTACT US</h2>
+        <section>
+            <address>
+                "addresslogo" address:
+                1224 Park Pi, Brooklyn, NY 11213
+            </address>
+            <p>
+                "Phonelogo" Phone:
+                +1 800 5596580
+                "maillogo" E-mail:
+            </p>
+            <a href="mailto:mail@demolink.org"></a>
+        </section>
+        <section>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193747.6573477421!2d-74.08508212082744!3d40.6451593628039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C%20%C3%89tat%20de%20New%20York%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sbe!4v1665247726243!5m2!1sfr!2sbe"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    </main>
+    <footer>
+        <p>
+            <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+            <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png"
+                alt="">
+        </p>
+    </footer>
 </body>
 
 </html>
