--- a/05.HTMLStructureren/ToyBench3/contact.html
+++ b/05.HTMLStructureren/ToyBench3/contact.html
@@ -10,9 +10,10 @@
 
 <body>
     <header>
-        <h1>Ol' Toy Bench</h1>
-        <p>A SECOND LIFE FOR TIMELESS TOYS</p>
-
+        <section>
+            <h1>Ol' Toy Bench</h1>
+            <p>A SECOND LIFE FOR TIMELESS TOYS</p>
+        </section>
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -45,7 +46,7 @@
     </header>
     <main>
         <h2>CONTACT US</h2>
-        <section>
+        <aside>
             <address>
                 "addresslogo" address:
                 1224 Park Pi, Brooklyn, NY 11213
@@ -56,7 +57,7 @@
                 "maillogo" E-mail:
             </p>
             <a href="mailto:mail@demolink.org"></a>
-        </section>
+        </aside>
         <aside>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193747.6573477421!2d-74.08508212082744!3d40.6451593628039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C%20%C3%89tat%20de%20New%20York%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sbe!4v1665247726243!5m2!1sfr!2sbe"
