--- a/07.CSSDesign/AcalliaOpmaak/index.html
+++ b/07.CSSDesign/AcalliaOpmaak/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <title>Acallia Development</title>
    <meta charset="utf-8">
    <link rel="stylesheet" href="css/start.css">
-   <link rel="stylesheet" href="css/styles.css">	
+   <link rel="stylesheet" href="css/styles.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
    <header>
@@ -23,7 +28,9 @@
    </header>
    <div id="banner">
       <p>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+         consequat.
       </p>
    </div>
    <main>
@@ -32,48 +39,67 @@
             <h3>What we do</h3>
             <img src="img/home_section_thumb1.jpg" alt="" class="minibanner" />
             <p>
-               Ham hock shank venison frankfurter porchetta pastrami pig kielbasa. Cow tail beef hamburger ham hock pancetta chicken shank shoulder sirloin venison brisket jowl short ribs. Jowl ham t-bone beef ribs doner landjaeger, rump pork belly flank bacon pork chop. Pancetta pork belly short ribs corned beef venison, kielbasa strip steak frankfurter turkey. Chuck tail tri-tip, pig doner andouille leberkas spare ribs pork loin chicken: 
+               Ham hock shank venison frankfurter porchetta pastrami pig kielbasa. Cow tail beef hamburger ham hock
+               pancetta chicken shank shoulder sirloin venison brisket jowl short ribs. Jowl ham t-bone beef ribs doner
+               landjaeger, rump pork belly flank bacon pork chop. Pancetta pork belly short ribs corned beef venison,
+               kielbasa strip steak frankfurter turkey. Chuck tail tri-tip, pig doner andouille leberkas spare ribs pork
+               loin chicken:
             </p>
             <ul>
                <li>Salami ball tip pancetta</li>
-               <li>beef ribs swine tail rump</li> 
-               <li>drumstick shoulder turducken</li> 
+               <li>beef ribs swine tail rump</li>
+               <li>drumstick shoulder turducken</li>
                <li>biltong capicola pig</li>
                <li>doner kielbasa</li>
             </ul>
             <p>
-               Cow turducken shankle, ham hock swine bacon capicola pork chop flank tail landjaeger pork belly. Boudin chuck venison brisket ground round. Pork pancetta hamburger tail drumstick. Meatball filet mignon capicola leberkas landjaeger beef ribs jowl ribeye hamburger doner.
+               Cow turducken shankle, ham hock swine bacon capicola pork chop flank tail landjaeger pork belly. Boudin
+               chuck venison brisket ground round. Pork pancetta hamburger tail drumstick. Meatball filet mignon
+               capicola leberkas landjaeger beef ribs jowl ribeye hamburger doner.
             </p>
-            <p class="more"><a href="#" >more</a></p>
+            <p class="more"><a href="#">more</a></p>
          </section>
          <section>
             <h3>Who we are</h3>
             <img src="img/home_section_thumb2.jpg" alt="" class="minibanner" />
             <p>
-               Ham hock shank venison frankfurter porchetta pastrami pig kielbasa. Cow tail beef hamburger ham hock pancetta chicken shank shoulder sirloin venison brisket jowl short ribs. Jowl ham t-bone beef ribs doner landjaeger, rump pork belly flank bacon pork chop. Pancetta pork belly short ribs corned beef venison, kielbasa strip steak frankfurter turkey. Chuck tail tri-tip, pig doner andouille leberkas spare ribs pork loin chicken: 
+               Ham hock shank venison frankfurter porchetta pastrami pig kielbasa. Cow tail beef hamburger ham hock
+               pancetta chicken shank shoulder sirloin venison brisket jowl short ribs. Jowl ham t-bone beef ribs doner
+               landjaeger, rump pork belly flank bacon pork chop. Pancetta pork belly short ribs corned beef venison,
+               kielbasa strip steak frankfurter turkey. Chuck tail tri-tip, pig doner andouille leberkas spare ribs pork
+               loin chicken:
             </p>
             <ul>
                <li>Salami ball tip pancetta</li>
-               <li>beef ribs swine tail rump</li> 
-               <li>drumstick shoulder turducken</li> 
+               <li>beef ribs swine tail rump</li>
+               <li>drumstick shoulder turducken</li>
                <li>biltong capicola pig</li>
                <li>doner kielbasa</li>
             </ul>
             <p>
-               Cow turducken shankle, ham hock swine bacon capicola pork chop flank tail landjaeger pork belly. Boudin chuck venison brisket ground round. Pork pancetta hamburger tail drumstick. Meatball filet mignon capicola leberkas landjaeger beef ribs jowl ribeye hamburger doner.
+               Cow turducken shankle, ham hock swine bacon capicola pork chop flank tail landjaeger pork belly. Boudin
+               chuck venison brisket ground round. Pork pancetta hamburger tail drumstick. Meatball filet mignon
+               capicola leberkas landjaeger beef ribs jowl ribeye hamburger doner.
             </p>
-            <p class="more"><a href="#" >more</a></p>
+            <p class="more"><a href="#">more</a></p>
          </section>
          <section>
             <h3>Special services</h3>
             <img src="img/home_section_thumb3.jpg" alt="" class="minibanner" />
             <p>
-               Ham hock shank venison frankfurter porchetta pastrami pig kielbasa. Cow tail beef hamburger ham hock pancetta chicken shank shoulder sirloin venison brisket jowl short ribs. Jowl ham t-bone beef ribs doner landjaeger, rump pork belly flank bacon pork chop. Pancetta pork belly short ribs corned beef venison, kielbasa strip steak frankfurter turkey. Chuck tail tri-tip, pig doner andouille leberkas spare ribs pork loin chicken. Salami ball tip pancetta, beef ribs swine tail rump drumstick shoulder turducken biltong capicola pig doner kielbasa. 
+               Ham hock shank venison frankfurter porchetta pastrami pig kielbasa. Cow tail beef hamburger ham hock
+               pancetta chicken shank shoulder sirloin venison brisket jowl short ribs. Jowl ham t-bone beef ribs doner
+               landjaeger, rump pork belly flank bacon pork chop. Pancetta pork belly short ribs corned beef venison,
+               kielbasa strip steak frankfurter turkey. Chuck tail tri-tip, pig doner andouille leberkas spare ribs pork
+               loin chicken. Salami ball tip pancetta, beef ribs swine tail rump drumstick shoulder turducken biltong
+               capicola pig doner kielbasa.
             </p>
             <p>
-               Cow turducken shankle, ham hock swine bacon capicola pork chop flank tail landjaeger pork belly. Boudin chuck venison brisket ground round. Pork pancetta hamburger tail drumstick. Meatball filet mignon capicola leberkas landjaeger beef ribs jowl ribeye hamburger doner.
+               Cow turducken shankle, ham hock swine bacon capicola pork chop flank tail landjaeger pork belly. Boudin
+               chuck venison brisket ground round. Pork pancetta hamburger tail drumstick. Meatball filet mignon
+               capicola leberkas landjaeger beef ribs jowl ribeye hamburger doner.
             </p>
-            <p class="more"><a href="#" >more</a></p>
+            <p class="more"><a href="#">more</a></p>
          </section>
       </div>
       <aside>
@@ -99,4 +125,5 @@
       <p>CSS Templates | by CssTemplates</p>
    </footer>
 </body>
+
 </html>
