--- a/07.CSSDesign/AcalliaOpmaak/index.html
+++ b/07.CSSDesign/AcalliaOpmaak/index.html
@@ -116,7 +116,7 @@
                <h3>Newsletter</h3>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit consequat.</p>
                <label for="email">E-mail address</label>
-               <input type="text" id="email" placeholder="e-mail" /> <input type="submit" value="Sign up" />
+               <input type="text" id="email" placeholder="e-mail" /> <input type="submit" value="Sign up" id="Signup" />
             </form>
          </section>
       </aside>
