--- a/09.CSSLayout2/Susten/index.html
+++ b/09.CSSLayout2/Susten/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div id "munulogo">
+        <div id="menulogo">
             <nav>
                 <ul>
                     <li><a class="active" href="">Home</a></li>
