--- a/09.CSSLayout2/Susten/index.html
+++ b/09.CSSLayout2/Susten/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Manjari:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Susten</title>
 </head>
 
 <body>
     <header>
         <div id="menulogo">
+            <img src="img/logo.png" alt="">
             <nav>
                 <ul>
                     <li><a class="active" href="">Home</a></li>
@@ -35,6 +37,7 @@
         <h3>Our commitments</h3>
         <div id="commit">
             <div class="middle_main">
+                <img src="img/people.jpg" alt="">
                 <div id="stakeholders">
                     <h3>To Our Stakeholders</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
