--- a/09.CSSLayout2/Susten/index.html
+++ b/09.CSSLayout2/Susten/index.html
@@ -27,37 +27,56 @@
 
         <section id="banner">
             <div id="banner_box"></div>
-            <h2>Responsible</h2>
+            <h1>Responsible</h1>
             <p>We seek to reduce our energy and water use by 15% and on day send zero waste to landfill.</p>
         </section>
 
     </header>
     <main>
-        <h2>Susten's Susten's Sustainability </h2>
+        <h1>Susten's Sustainability</h1>
         <h3>Our commitments</h3>
         <div id="commit">
             <div class="middle_main">
                 <img src="img/people.jpg" alt="">
-                <div id="stakeholders">
-                    <h3>To Our Stakeholders</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                        incididunt ut</p>
-                    <a href="">Learn more ▸</a>
-                </div>
-                <div class="middle_main">
-
-                </div>
-                <div class="middle_main">
-                    <div id="salade">
-                        <h3>Download The Report</h3>
-                        <ul>
-                            <li><a href="">Download The Full Report</a></li>
-                            <li><a href="">View Reporting Library</a></li>
-                            <li><a href="">View Previous Reports</a></li>
-                        </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt utlabore et dolore magna aliqua.</p>
+                <a href="">Learn more ▸</a>
+            </div>
+            <div class="middle_main">
+                <img src="img/planet.jpg" alt="">
+                <p>Lorem  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                <a href="">Learn more ▸</a>
+            </div>
+            <div class="middle_main">
+                <img src="img/plate.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                <a href="">Learn more ▸</a>
+            </div>
+        </div>
+        <div>
+            <section>
+                <div>
+                    <div class="middle_main">
+                        <div id="stakeholders">
+                            <h3>To Our Stakeholders</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut</p>
+                            <a href="">Learn more ▸</a>
+                        </div>
+                    </div>
+                    <div class="middle_main"><iframe width="1135" height="647" src="https://www.youtube.com/embed/KfB2sx9uCkI"
+                            allowfullscreen></iframe></div>
+                    <div class="middle_main">
+                        <div id="salade">
+                            <h3>Download The Report</h3>
+                            <ul>
+                                <li><a href="">Download The Full Report</a></li>
+                                <li><a href="">View Reporting Library</a></li>
+                                <li><a href="">View Previous Reports</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </main>
     <footer>
