--- a/09.CSSLayout2/Susten/index.html
+++ b/09.CSSLayout2/Susten/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Manjari:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Manjari:wght@700&display=swap" rel="stylesheet">
     <title>Susten</title>
 </head>
 
 <body>
     <header>
+
         <div id="menulogo">
             <img src="img/logo.png" alt="">
             <nav>
@@ -20,65 +21,73 @@
                     <li><a href="">Sustainability</a></li>
                     <li><a href="">People</a></li>
                     <li><a href="">Planet</a></li>
+                    <li><a href="">Plate</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <section id="banner">
-            <div id="banner_box"></div>
-            <h1>Responsible</h1>
-            <p>We seek to reduce our energy and water use by 15% and on day send zero waste to landfill.</p>
+            <div id="banner_box">
+                <h1>Responsible</h1>
+                <p>We seek to reduce our energy and water use by 15% and one day send zero waste to landfill.</p>
+            </div>
         </section>
 
     </header>
     <main>
-        <h1>Susten's Sustainability</h1>
-        <h3>Our commitments</h3>
-        <div id="commit">
-            <div class="middle_main">
-                <img src="img/people.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt utlabore et dolore magna aliqua.</p>
-                <a href="">Learn more ▸</a>
-            </div>
-            <div class="middle_main">
-                <img src="img/planet.jpg" alt="">
-                <p>Lorem  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-                <a href="">Learn more ▸</a>
-            </div>
-            <div class="middle_main">
-                <img src="img/plate.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-                <a href="">Learn more ▸</a>
-            </div>
-        </div>
-        <div>
-            <section>
-                <div>
-                    <div class="middle_main">
-                        <div id="stakeholders">
-                            <h3>To Our Stakeholders</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut</p>
-                            <a href="">Learn more ▸</a>
-                        </div>
-                    </div>
-                    <div class="middle_main"><iframe width="1135" height="647" src="https://www.youtube.com/embed/KfB2sx9uCkI"
-                            allowfullscreen></iframe></div>
-                    <div class="middle_main">
-                        <div id="salade">
-                            <h3>Download The Report</h3>
-                            <ul>
-                                <li><a href="">Download The Full Report</a></li>
-                                <li><a href="">View Reporting Library</a></li>
-                                <li><a href="">View Previous Reports</a></li>
-                            </ul>
-                        </div>
-                    </div>
+        <section>
+            <h1>Susten's Sustainability</h1>
+            <h2>Our commitments</h2>
+            <div id="commit">
+                <div class="main_middle">
+                    <img src="img/people.jpg" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                        utlabore et dolore magna aliqua.</p>
+                    <a href="">Learn more ▸</a>
                 </div>
-            </section>
-        </div>
+                <div class="main_middle">
+                    <img src="img/planet.jpg" alt="">
+                    <p>Lorem Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat</p>
+                    <a href="">Learn more ▸</a>
+                </div>
+                <div class="main_middle">
+                    <img src="img/plate.jpg" alt="">
+                    <p>Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat</p>
+                    <a href="">Learn more ▸</a>
+                </div>
+            </div>
+            <div>
+                <section>
+                    <div>
+                        <div class="main_middle">
+                            <div id="stakeholders">
+                                <h2>To Our Stakeholders</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut</p>
+                                <a href="">Learn more ▸</a>
+                            </div>
+                        </div>
+                        <div class="main_middle"><iframe width="1135" height="647"
+                                src="https://www.youtube.com/embed/KfB2sx9uCkI" allowfullscreen></iframe></div>
+                        <div class="main_middle">
+                            <div id="salade">
+                                <h3>Download The Report</h3>
+                                <ul>
+                                    <li><a href="">Download The Full Report</a></li>
+                                    <li><a href="">View Reporting Library</a></li>
+                                    <li><a href="">View Previous Reports</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </section>
     </main>
+
     <footer>
         <div id="footer_opmaak">
             <div id="footer_rechts">
@@ -91,11 +100,12 @@
             <div id="footer_links">
                 <ul>
                     <li><a href="">Contact Us</a></li>
-                    <li><a href="">Privacy Politicy</a></li>
-                    <li><a href="">Corporate Governace</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Corporate Governance</a></li>
                     <li><a href="">Our Brands</a></li>
                     <li><a href="">About Us</a></li>
                 </ul>
+                <small> Copyright © 2022 susten Corporation. All rights reserved.</small>
             </div>
         </div>
     </footer>
